--- a/auth/login.html
+++ b/auth/login.html
@@ -74,9 +74,13 @@
       </div>
       <div class="input-container">
         <input type="password" name="password" id="loginPassword" placeholder="Password" required>
+        <div style="text-align: right; margin-top: 5px;">
+          <a href="forgot_password.html" style="font-size: 0.9em; color: #007bff;">Forgot Password?</a>
+        </div>
       </div>
       <button type="submit" class="btn">Login</button>
     </form>
+
 
     <p style="margin-top: 10px;">Don't have an account? <a href="register.html">Create New Account</a></p>
   </div>
