--- a/auth/forgot_password.html
+++ b/auth/forgot_password.html
@@ -4,23 +4,39 @@
   <meta charset="UTF-8">
   <title>Forgot Password</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(135deg, #2c3e50, #3498db);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      font-family: 'Poppins', sans-serif;
+    }
+    .card {
+      width: 400px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container mt-5">
-    <div class="card shadow">
-      <div class="card-header bg-dark text-white">
-        <h4>Forgot Password</h4>
-      </div>
-      <div class="card-body">
-        <form id="forgotForm">
-          <div class="mb-3">
-            <label for="email" class="form-label">Enter your registered email</label>
-            <input type="email" class="form-control" id="email" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Send Reset Link</button>
-          <div id="msgBox" class="mt-3 alert d-none"></div>
-        </form>
-      </div>
+<body>
+  <div class="card bg-white">
+    <div class="card-header text-center bg-white">
+      <h5 class="mb-0">Forgot Password</h5>
+    </div>
+    <div class="card-body">
+      <form id="forgotForm">
+        <div class="mb-3">
+          <label for="email" class="form-label">Enter your registered email</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Send Reset Link</button>
+        <div id="msgBox" class="mt-3 alert d-none"></div>
+      </form>
+    </div>
+    <div class="card-footer text-start bg-white">
+      <a href="login.html" class="btn btn-outline-primary btn-sm">Back to Main Form</a>
     </div>
   </div>
 
@@ -46,6 +62,7 @@
         box.textContent = result;
       }
       box.classList.remove("d-none");
+      setTimeout(() => box.classList.add("d-none"), 3000);
     });
   </script>
 </body>
